More updated to package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.0.0",
   "private": false,
   "description": "Datatable component for Vue 2.x",
-  "author": "Manuel Yang",
+  "author": "Dcode Group",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -137,7 +137,7 @@
     }
   },
   "bugs": {
-    "url": "https://github.com/mannyyang/vuetable-3/issues"
+    "url": "https://github.com/dcodegroup/vuetable-3/issues"
   },
   "engines": {
     "node": ">= 4.0.0",
@@ -146,7 +146,7 @@
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
-  "homepage": "https://github.com/mannyyang/vuetable-3#readme",
+  "homepage": "https://github.com/dcodegroup/vuetable-3#readme",
   "keywords": [
     "vue",
     "component",
@@ -164,7 +164,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mannyyang/vuetable-3.git"
+    "url": "git+https://github.com/dcodegroup/vuetable-3.git"
   },
   "directories": {
     "doc": "docs",
