--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "main": "dist/vuetable-3.umd.js",
   "dependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "vuedraggable-es": "^4.1.1"
   },
   "devDependencies": {
     "@cypress/vite-dev-server": "^4.0.1",
@@ -95,8 +96,7 @@
     "vue-hot-reload-api": "^2.3.4",
     "vue-html-loader": "1.2.4",
     "vue-router": "^4.1.6",
-    "vue-style-loader": "4.1.3",
-    "vuedraggable-es": "^4.1.1"
+    "vue-style-loader": "4.1.3"
   },
   "browserslist": [
     "> 1%",
