Swap out node-sass for sass

--- a/package.json
+++ b/package.json
@@ -79,11 +79,11 @@
     "lolex": "^5.1.2",
     "mocha": "^10.1.0",
     "moxios": "^0.4.0",
-    "node-sass": "^8.0.0",
     "opn": "^5.5.0",
     "ora": "6.1.2",
     "promise-polyfill": "^8.2.3",
     "rimraf": "^3.0.2",
+    "sass": "^1.58.1",
     "semver": "^7.3.8",
     "shelljs": "^0.8.5",
     "standard-version": "^9.5.0",
